Restructured, attempting cleaner div'ing

--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
-    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Recipe Landing Page</title>
 </head>
 <body>
     <header>
-        <h1>Recipes</h1>
+        <h1>Recipe Index</h1>
+            <blockquote>by Dallas J. Bean</blockquote>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <h2>Lasagna</h2>
-            <p><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">worlds-best-lasagna</a></p>
+        <section class="page-wrap">
+            <div class="column-left">
+
+            </div>
+            <div class="column-center">
+
+            </div>
+            <div class="column-right">
+
+            </div>
+        </section>
     </main>
 </body>
 </html>
