restarting, divs idea didn't work out

--- a/index.html
+++ b/index.html
@@ -10,26 +10,17 @@
     <header>
         <h1>Recipe Index</h1>
             <blockquote>by Dallas J. Bean</blockquote>
-        <nav>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
     </header>
     <main>
-        <section class="page-wrap">
-            <div class="column-left">
-
-            </div>
-            <div class="column-center">
-
-            </div>
-            <div class="column-right">
-
-            </div>
-        </section>
+<!-- ~~~ -->
+            <nav class="nav-bar">
+                <ul>
+                    <li><a href="./pages/recipes/Italian/index.html" target="_blank" rel="noopener noreferrer">Italian</a></li>
+                    <li><a href="./pages/recipes/Mexican/index.html" target="_blank" rel="noopener noreferrer">Mexican</a></li>
+                    <li><a href="./pages/recipes/Chinese/index.html" target="_blank" rel="noopener noreferrer">Chinese</a></li>
+                </ul>
+            </nav>
+<!-- ~~~ -->
     </main>
 </body>
 </html>
