layout restyled to show figcaps and links for the images corresponding to branch pages

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
             <blockquote>by Dallas J. Bean</blockquote>
     </header>
     <main>
-<!-- ~~~ -->
-            <nav class="nav-bar">
-                <ul>
-                    <li><a href="./pages/recipes/Italian/index.html" target="_blank" rel="noopener noreferrer">Italian</a></li>
-                    <li><a href="./pages/recipes/Mexican/index.html" target="_blank" rel="noopener noreferrer">Mexican</a></li>
-                    <li><a href="./pages/recipes/Chinese/index.html" target="_blank" rel="noopener noreferrer">Chinese</a></li>
-                </ul>
-            </nav>
-<!-- ~~~ -->
+        <section class="page-wrap">
+            <div class="column"> <figcaption><a href="./pages/recipes/Italian/index.html" target="_blank" rel="noopener noreferrer">Italian</figcaption><img src="./img/Italian-food.jpg" alt="Italian food"></a></div>
+            <div class="column"> <figcaption><a href="./pages/recipes/Mexican/index.html" target="_blank" rel="noopener noreferrer">Mexican</figcaption><img src="./img/Mexican-food.jpg" alt="Mexican food"></a></div>
+            <div class="column"> <figcaption><a href="./pages/recipes/Chinese/index.html" target="_blank" rel="noopener noreferrer">Chinese</figcaption><img src="./img/Chinese-food.jpg" alt="Chinese food"></a></div>
+        </section>
     </main>
 </body>
 </html>
